--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
   <script>
   // ==== KONFIGURASI ====
   const CLIENT_ID = "Ov23lis3fqdO2Kv7zyvI";
-  const REDIRECT_URI = "http://localhost/05/res.html"; // contoh: window.location.origin + "/"
+  const REDIRECT_URI = "https://sismadi.github.io/login/"; // contoh: window.location.origin + "/"
   const SCOPES = ["read:user", "user:email"]; // tambah scope sesuai kebutuhan
   // Jika perlu fallback proxy (Cloudflare Worker, dst), isi di sini:
   const TOKEN_PROXY = ""; // contoh: "https://my-worker.example.workers.dev/token"
