--- a/index.html
+++ b/index.html
@@ -101,6 +101,10 @@
   // Jika perlu fallback proxy (Cloudflare Worker, dst), isi di sini:
   const TOKEN_PROXY = ""; // contoh: "https://my-worker.example.workers.dev/token"
 
+
+const TOKEN_PROXY = "https://myapp.wawan.workers.dev/token";
+
+    
   // ==== UTIL ====
   const b64url = (buf) => {
     return btoa(String.fromCharCode(...new Uint8Array(buf)))
