--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   const REDIRECT_URI = "https://sismadi.github.io/login/"; // contoh: window.location.origin + "/"
   const SCOPES = ["read:user", "user:email"]; // tambah scope sesuai kebutuhan
   // Jika perlu fallback proxy (Cloudflare Worker, dst), isi di sini:
-  const TOKEN_PROXY = ""; // contoh: "https://my-worker.example.workers.dev/token"
+  // const TOKEN_PROXY = ""; // contoh: "https://my-worker.example.workers.dev/token"
 
 
 const TOKEN_PROXY = "https://myapp.wawan.workers.dev/token";
