--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@
 
   <script>
   // ==== KONFIGURASI ====
-  const CLIENT_ID = "Ov23ligUmAdJyUswEEDO";
+  const CLIENT_ID = "Ov23li1EFh24K8EdVIjR";
   const REDIRECT_URI = "https://sismadi.github.io/login/"; // contoh: window.location.origin + "/"
   const SCOPES = ["read:user", "user:email"]; // tambah scope sesuai kebutuhan
   // Jika perlu fallback proxy (Cloudflare Worker, dst), isi di sini:
-  const TOKEN_PROXY = "https://myapp.wawan.workers.dev/"; // contoh: "https://my-worker.example.workers.dev/token"
+  const TOKEN_PROXY = "https://myapp.wawan.workers.dev/token"; // contoh: "https://my-worker.example.workers.dev/token"
 
   // ==== UTIL ====
   const b64url = (buf) => {
