--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
 
       // ==== KONFIGURASI TUJUAN ====
       const owner = "sismadi";          // ganti sesuai target
-      const repo  = "nama-repo";        // ganti
-      const path  = "folder/namafile.txt"; // ganti
+      const repo  = "login";        // ganti
+      const path  = "namafile.txt"; // ganti
       const branch = "main";            // ganti bila perlu
       const message = "feat: upload via myapp";
 
