--- a/index.html
+++ b/index.html
@@ -115,19 +115,20 @@
   
 <script>
  // ===== Helpers upload PDF =====
+// Lebih stabil untuk PDF / file biner
 async function b64FromFile(file) {
   return new Promise((resolve, reject) => {
     const fr = new FileReader();
     fr.onload = () => {
-      const bytes = new Uint8Array(fr.result);
-      let bin = "";
-      for (let i = 0; i < bytes.length; i++) bin += String.fromCharCode(bytes[i]);
-      resolve(btoa(bin)); // base64 untuk konten biner (PDF)
+      const dataUrl = String(fr.result || "");
+      const base64 = dataUrl.split(",")[1] || "";
+      resolve(base64.replace(/\r?\n/g, "")); // pastikan tanpa newline
     };
     fr.onerror = reject;
-    fr.readAsArrayBuffer(file);
+    fr.readAsDataURL(file); // <- langsung dapat base64
   });
 }
+
 
 async function getExistingSha({ owner, repo, path, branch, token }) {
   const url = `https://api.github.com/repos/${owner}/${repo}/contents/${encodeURIComponent(path)}?ref=${encodeURIComponent(branch)}`;
@@ -196,7 +197,9 @@ function initUploaderDefaults(me) {
         // Jika user belum isi path → gunakan nama file
         const p = path.value?.trim() || ("uploads/" + f.name.replace(/\s+/g, "_"));
         const contentBase64 = await b64FromFile(f);
+if (!contentBase64) throw new Error("Base64 kosong: gagal membaca file. Coba file kecil dulu.");
 
+  
         const result = await uploadToRepo({
           owner: owner.value.trim(),
           repo : repo.value.trim(),
